--- a/src/virus/view/newCascadeStyleSheet.css
+++ b/src/virus/view/newCascadeStyleSheet.css
@@ -4,7 +4,7 @@
     -jfx-focus-color: -fx-secondary;
 }
 #lbl_t_Turno{
-     -fx-font-family: "Decker";
+    -fx-font-family: "Decker";
     /*-fx-font-family: "Arial Rounded MT Bold";*/
     /*-fx-font-family: url("../fonts/SourceSansPro-Bold.ttf");*/
     -fx-font-size: 10pt;
@@ -18,6 +18,13 @@
     -fx-border-color:white; 
     -fx-border-width: 1; 
     -fx-border-style: solid;
+    -fx-border-radius: 5px;
+}
+.hVoxActivo:hover{
+    -fx-border-color:gray; 
+    -fx-border-width: 2; 
+    -fx-border-style: solid;
+    -fx-border-radius: 5px;
 }
 
 .Label{
@@ -225,7 +232,7 @@
     -jfx-button-type: RAISED;/*raised and flat*/
     -fx-text-fill: WHITE;
     -jfx-rippler-fill: GREEN;
-    
+
 }
 
 .text-field{
