--- a/src/virus/view/Juego.fxml
+++ b/src/virus/view/Juego.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
 <BorderPane prefHeight="645.0" prefWidth="1074.0" stylesheets="@newCascadeStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="virus.controller.JuegoController">
@@ -23,152 +24,176 @@
                   <Label fx:id="user6" layoutX="802.0" layoutY="404.0" prefHeight="40.0" prefWidth="232.0" styleClass="lbl" text="" />
                   <HBox fx:id="hvox" layoutX="40.0" layoutY="278.0" prefHeight="107.25" prefWidth="377.75">
                      <children>
-                        <VBox fx:id="jug1_1" prefHeight="0.0" prefWidth="74.75">
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children></VBox>
-                        <VBox fx:id="jug1_2" prefHeight="0.0" prefWidth="74.75">
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children></VBox>
-                        <VBox fx:id="jug1_3" prefHeight="0.0" prefWidth="75.75">
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children></VBox>
-                        <VBox fx:id="jug1_4" prefHeight="0.0" prefWidth="75.75">
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children></VBox>
-                        <VBox fx:id="jug1_5" prefHeight="0.0" prefWidth="75.75">
+                        <Pane>
                            <children>
                               <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
                            </children>
-                        </VBox>
+                        </Pane>
+                        <Pane>
+                           <children>
+                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </Pane>
+                        <Pane>
+                           <children>
+                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </Pane>
+                        <Pane>
+                           <children>
+                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </Pane>
+                        <Pane>
+                           <children>
+                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </Pane>
                      </children>
                   </HBox>
                   <HBox fx:id="hvox2" layoutX="656.0" layoutY="278.0" prefHeight="100.0" prefWidth="377.75">
                      <children>
-                        <VBox fx:id="jug2_1" prefHeight="200.0" prefWidth="74.75">
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children></VBox>
-                        <VBox fx:id="jug2_2" prefHeight="200.0" prefWidth="74.75">
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children></VBox>
-                        <VBox fx:id="jug2_3" prefHeight="200.0" prefWidth="74.75">
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children></VBox>
-                        <VBox fx:id="jug2_4" prefHeight="200.0" prefWidth="74.75">
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children></VBox>
-                        <VBox fx:id="jug2_5" prefHeight="200.0" prefWidth="74.75">
+                        <Pane>
                            <children>
                               <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
                            </children>
-                        </VBox>
+                        </Pane>
+                        <Pane>
+                           <children>
+                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </Pane>
+                        <Pane>
+                           <children>
+                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </Pane>
+                        <Pane>
+                           <children>
+                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </Pane>
+                        <Pane>
+                           <children>
+                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </Pane>
                      </children>
                   </HBox>
                   <HBox fx:id="hvox3" layoutX="656.0" layoutY="69.0" prefHeight="100.0" prefWidth="377.75">
                      <children>
-                        <VBox fx:id="jug3_1" prefHeight="200.0" prefWidth="74.75">
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children></VBox>
-                        <VBox fx:id="jug3_2" prefHeight="200.0" prefWidth="74.75">
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children></VBox>
-                        <VBox fx:id="jug3_3" prefHeight="200.0" prefWidth="74.75">
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children></VBox>
-                        <VBox fx:id="jug3_4" prefHeight="200.0" prefWidth="74.75">
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children></VBox>
-                        <VBox fx:id="jug3_5" prefHeight="200.0" prefWidth="74.75">
+                        <Pane>
                            <children>
                               <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
                            </children>
-                        </VBox>
+                        </Pane>
+                        <Pane>
+                           <children>
+                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </Pane>
+                        <Pane>
+                           <children>
+                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </Pane>
+                        <Pane>
+                           <children>
+                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </Pane>
+                        <Pane>
+                           <children>
+                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </Pane>
                      </children>
                   </HBox>
                   <HBox fx:id="hvox4" layoutX="40.0" layoutY="69.0" prefHeight="100.0" prefWidth="377.75">
                      <children>
-                        <VBox fx:id="jug4_1" prefHeight="200.0" prefWidth="74.75">
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children></VBox>
-                        <VBox fx:id="jug4_2" prefHeight="200.0" prefWidth="74.75">
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children></VBox>
-                        <VBox fx:id="jug4_3" prefHeight="200.0" prefWidth="74.75">
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children></VBox>
-                        <VBox fx:id="jug4_4" prefHeight="200.0" prefWidth="74.75">
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children></VBox>
-                        <VBox fx:id="jug4_5" prefHeight="200.0" prefWidth="74.75">
+                        <Pane>
                            <children>
                               <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
                            </children>
-                        </VBox>
+                        </Pane>
+                        <Pane>
+                           <children>
+                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </Pane>
+                        <Pane>
+                           <children>
+                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </Pane>
+                        <Pane>
+                           <children>
+                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </Pane>
+                        <Pane>
+                           <children>
+                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </Pane>
                      </children>
                   </HBox>
                   <HBox fx:id="hvox5" layoutX="40.0" layoutY="444.0" prefHeight="100.0" prefWidth="377.75">
                      <children>
-                        <VBox fx:id="jug5_1" prefHeight="200.0" prefWidth="74.75">
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children></VBox>
-                        <VBox fx:id="jug5_2" prefHeight="200.0" prefWidth="74.75">
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children></VBox>
-                        <VBox fx:id="jug5_3" prefHeight="200.0" prefWidth="74.75">
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children></VBox>
-                        <VBox fx:id="jug5_4" prefHeight="200.0" prefWidth="74.75">
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children></VBox>
-                        <VBox fx:id="jug5_5" prefHeight="200.0" prefWidth="74.75">
+                        <Pane>
                            <children>
                               <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
                            </children>
-                        </VBox>
+                        </Pane>
+                        <Pane>
+                           <children>
+                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </Pane>
+                        <Pane>
+                           <children>
+                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </Pane>
+                        <Pane>
+                           <children>
+                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </Pane>
+                        <Pane>
+                           <children>
+                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </Pane>
                      </children>
                   </HBox>
                   <HBox fx:id="hbox6" layoutX="656.0" layoutY="444.0" prefHeight="100.0" prefWidth="377.75">
                      <children>
-                        <VBox fx:id="jug6_1" prefHeight="200.0" prefWidth="74.75">
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children></VBox>
-                        <VBox fx:id="jug6_2" prefHeight="200.0" prefWidth="74.75">
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children></VBox>
-                        <VBox fx:id="jug6_3" prefHeight="200.0" prefWidth="74.75">
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children></VBox>
-                        <VBox fx:id="jug6_4" prefHeight="200.0" prefWidth="74.75">
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children></VBox>
-                        <VBox fx:id="jug6_5" prefHeight="200.0" prefWidth="74.75">
+                        <Pane>
                            <children>
                               <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
                            </children>
-                        </VBox>
+                        </Pane>
+                        <Pane>
+                           <children>
+                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </Pane>
+                        <Pane>
+                           <children>
+                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </Pane>
+                        <Pane>
+                           <children>
+                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </Pane>
+                        <Pane>
+                           <children>
+                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
+                           </children>
+                        </Pane>
                      </children>
                   </HBox>
                   <HBox layoutX="453.0" layoutY="277.0" styleClass="hVoxActivo">
