--- a/src/virus/view/Juego.fxml
+++ b/src/virus/view/Juego.fxml
@@ -24,176 +24,56 @@
                   <Label fx:id="user6" layoutX="802.0" layoutY="404.0" prefHeight="40.0" prefWidth="232.0" styleClass="lbl" text="" />
                   <HBox fx:id="hvox" layoutX="40.0" layoutY="278.0" prefHeight="108.0" prefWidth="377.75">
                      <children>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
+                        <Pane />
+                        <Pane />
+                        <Pane />
+                        <Pane />
+                        <Pane />
                      </children>
                   </HBox>
                   <HBox fx:id="hvox2" layoutX="656.0" layoutY="278.0" prefHeight="108.0" prefWidth="377.75">
                      <children>
-                        <Pane prefHeight="108.0" prefWidth="75.0">
-                           <children>
-                              <ImageView fitHeight="108.0" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
+                        <Pane prefHeight="108.0" prefWidth="75.0" />
+                        <Pane />
+                        <Pane />
+                        <Pane />
+                        <Pane />
                      </children>
                   </HBox>
                   <HBox fx:id="hvox3" layoutX="656.0" layoutY="69.0" prefHeight="108.0" prefWidth="377.75">
                      <children>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
+                        <Pane />
+                        <Pane />
+                        <Pane />
+                        <Pane />
+                        <Pane />
                      </children>
                   </HBox>
                   <HBox fx:id="hvox4" layoutX="40.0" layoutY="69.0" prefHeight="108.0" prefWidth="377.75">
                      <children>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
+                        <Pane />
+                        <Pane />
+                        <Pane />
+                        <Pane />
+                        <Pane />
                      </children>
                   </HBox>
                   <HBox fx:id="hvox5" layoutX="40.0" layoutY="444.0" prefHeight="108.0" prefWidth="377.75">
                      <children>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
+                        <Pane />
+                        <Pane />
+                        <Pane />
+                        <Pane />
+                        <Pane />
                      </children>
                   </HBox>
                   <HBox fx:id="hbox6" layoutX="656.0" layoutY="444.0" prefHeight="108.0" prefWidth="377.75">
                      <children>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
-                        <Pane>
-                           <children>
-                              <ImageView fitHeight="107.25" fitWidth="74.75" pickOnBounds="true" preserveRatio="true" />
-                           </children>
-                        </Pane>
+                        <Pane />
+                        <Pane />
+                        <Pane />
+                        <Pane />
+                        <Pane />
                      </children>
                   </HBox>
                   <HBox layoutX="453.0" layoutY="277.0" styleClass="hVoxActivo">
