--- a/src/virus/view/Inicio.fxml
+++ b/src/virus/view/Inicio.fxml
@@ -12,8 +12,8 @@
          <children>
             <AnchorPane id="omg" prefHeight="690.0" prefWidth="1074.0" stylesheets="@newCascadeStyleSheet.css">
                <children>
-                  <Label layoutX="14.0" layoutY="562.0" onMouseClicked="#Salir" styleClass="lbl" text="Salir" />
-                  <Label layoutX="965.0" layoutY="562.0" onMouseClicked="#Jugar" styleClass="lbl2" text="Jugar" />
+                  <Label layoutX="14.0" layoutY="623.0" onMouseClicked="#Salir" styleClass="lbl2" text="Salir" />
+                  <Label layoutX="965.0" layoutY="623.0" onMouseClicked="#Jugar" styleClass="lbl2" text="Jugar" />
                   <JFXTextField fx:id="txtIP" layoutX="328.0" layoutY="126.0" prefHeight="31.0" prefWidth="420.0" promptText="Dirección IP" />
                   <JFXTextField fx:id="txtServidor" layoutX="328.0" layoutY="253.0" prefHeight="31.0" prefWidth="420.0" promptText="Dirección IP del Servidor" />
                   <JFXTextField fx:id="txtJugador" layoutX="327.0" layoutY="387.0" prefHeight="31.0" prefWidth="420.0" promptText="Nombre de usuario" />
